# parkhaus_sim

./: .gitignore  CMakeLists.txt  Dokumentation-Teil-2.md  LICENSE  README.md  funktionalitaeten.md
code/: statformat.c
doku/: Beschreibung_der_Vorgehensweise.md  Dokumentation-Teil-2.md  console_screenshot  doku-teil-2.md  gruppierung_und_strukturen.md  parkhaus_sim_example.xlsx  teamarbeit.md
include/: car.h  include-info.md  parking.h  queue.h  simulation.h  stats.h  ui.h
planung/: funktionalitaeten.md
src/: car.c  main.c  parking.c  queue.c  simulation.c  stats.c  ui.c
test/: test_car.c  test_parking.c  test_queue.c  test_simulation.c  test_stats.c  test_ui.c
